feat(analysis): 新增大盘温度计和个股技术分析功能
- 添加大盘温度计页面展示市场恐慌贪婪指数
- 实现缠论K线图数据计算和可视化功能
- 添加资金流向历史趋势分析功能
- 实现个股相对强弱分析对比行业表现
- 新增股票代码规范化处理函数
- 更新菜单结构添加大盘温度计入口
- 修改ClickHouse数据库连接配置地址
- 添加10年国债收益率获取脚本
- 增加模拟盘持仓预警相关API接口
- 重构菜单展开状态逻辑调整导航结构